--- a/scpt.tex
+++ b/scpt.tex
@@ -1,7 +1,5 @@
-%%original
+% choose one of follwing three
 %\documentclass[review]{elsarticle}
-
-%%edited by wmm
 %\documentclass[final,5p,times,twocolumn]{elsarticle}
 \documentclass[final,5p,times,twocolumn]{elsarticle}
 \usepackage[labelfont=bf,justification=raggedright]{caption}
