--- a/scpt.tex
+++ b/scpt.tex
@@ -1,4 +1,4 @@
-% choose one of follwing three
+% choose one of following three
 %\documentclass[review]{elsarticle}
 %\documentclass[final,5p,times,twocolumn]{elsarticle}
 \documentclass[final,5p,times,twocolumn]{elsarticle}
@@ -55,7 +55,7 @@
 
 \begin{frontmatter}
 
-\title{Effect of Void on Fracture Behavior of Two-Phase $\alpha$($\rm TiAl$)+$\gamma$($\rm Ti_3Al$) Alloy}
+\title{Effect of Void on Fracture Process of Two-Phase $\alpha$($\rm TiAl$)+$\gamma$($\rm Ti_3Al$) Alloy}
 %\tnotetext[mytitlenote]{*** \href{http://www.ctan.org/tex-archive/macros/latex/contrib/elsarticle}{CTAN}.}
 
 %% Group authors per affiliation:
@@ -162,7 +162,7 @@ parameters can begiven as Table \ref{Tab:par}:
 
 The existence of void detract the strength, and the void inside $\alpha$ phase grain have most significant  impact on the strength, however the void on the grain boundary have little impact on incipient strength of the material. Detailed observation of speciman with void inside the grain is shown in Figure ~\ref{fig:strline}.
 1.In many cases the orientation of slip slip is changed because the crystallographically avalilable slip and directions are not coontinuous across teh interface. This may significantly reduce the Schmid factor and thus impede slip tansfer. At the $\gamma/\gamma$ interfaces teh orientation of the slip plan could change through a relavely large angle of about 90 degree. Reorientation of slip is always required at the $\alpha_{2} / \gamma$ interface; the smallest angle between the corresponding slip planes ${1 1 1 }_{\gamma}$ and ${ 1 0 -1 0}_{\alpha_2}$ is about 19 degree ref{}.
-2. The core of  a dislocaiton intersecting an interface often needs to be transformed. For example, an ordinary 1/2<110] dislocaiton glidng in one $\gamma$ grain has to be converted in to a <101] superdislocation with the double Burgers vector glidng in an adjacent $\gamma$ grain. At the $\alpha/\gamma$ interface the dislocations existing in the $D0_{19}$ structure have to be transformed into dislocaitons consistent with the $L1_0$structure. These core tranfformations are associated with a change of teh dislocation line enenrgy because teh lengths of teh Burgers vectors and the shear moduli are different.
+2. The core of  a dislocaiton intersecting an interface often needs to be transformed. For example, an ordinary 1/2<110] dislocaiton glidng in one $\gamma$ grain has to be converted in to a <101] superdislocation with the double Burgers vector glidng in an adjacent $\gamma$ grain. At the $\alpha/\gamma$ interface the dislocations existing in the $D0_{19}$ structure have to be transformed into dislocaitons consistent with the $L1_0$structure. These core tranfformations are associated with a change of teh dislocation line enenrgy because teh lengths of teh Burgers vectors and the shear module are different.
 3.Dislocations crossing semicoherent boundaries have to intersect the misfit dislocations, a process that involves elastic interaction, jog formation and the incorporation of gliding dislocations into the mismatch structure of the interface.When the slip is forced to cross $\alpha_2$ lamellae, pyramidal slip of the $\alpha_2$ phase is required, which needs an extremely high shear stress.
 \begin{figure}
 	\centering
