--- a/scpt.tex
+++ b/scpt.tex
@@ -55,7 +55,7 @@
 
 \begin{frontmatter}
 
-\title{Effect of Void on Fracture Process of Two-Phase $\alpha$($\rm TiAl$)+$\gamma$($\rm Ti_3Al$) Alloy}
+\title{Effect of Nanovoids on Fracture Process of Two-Phase $\alpha$($\rm TiAl$)+$\gamma$($\rm Ti_3Al$) Alloy}
 %\tnotetext[mytitlenote]{*** \href{http://www.ctan.org/tex-archive/macros/latex/contrib/elsarticle}{CTAN}.}
 
 %% Group authors per affiliation:
