--- a/scpt.tex
+++ b/scpt.tex
@@ -55,7 +55,7 @@
 
 \begin{frontmatter}
 
-\title{Effect of Nanovoids on Fracture Process of Two-Phase $\alpha$($\rm TiAl$)+$\gamma$($\rm Ti_3Al$) Alloy}
+\title{Effect of Nanovoid on Fracture Process of Two-Phase $\alpha$($\rm TiAl$)+$\gamma$($\rm Ti_3Al$) Alloy}
 %\tnotetext[mytitlenote]{*** \href{http://www.ctan.org/tex-archive/macros/latex/contrib/elsarticle}{CTAN}.}
 
 %% Group authors per affiliation:
@@ -66,7 +66,7 @@
 
 
 \begin{abstract}
- The fracture processes of nanocrystalline metallic materia is affected by dislocation, nanovoid and other defects. Existing studies of defect evolution in titanium--aluminium alloy cover the case that voids located in single crystals, inside grain in poly crystals and at the grain boundaries.Molecular dynamics simulation was performed to study the evolution of a spherical nanovoid in $\alpha$+$\gamma$ two-phase titanium-aluminium alloy under uniaxial tension.
+ The fracture processes of nanocrystalline metallic materia is affected by dislocation, nanovoid and other defects. Existing studies of defect evolution in titanium-aluminium alloy cover the case that voids located in single crystals, inside grain in poly crystals and at the grain boundaries.Molecular dynamics simulation was performed to study the evolution of a spherical nanovoid in $\alpha$+$\gamma$ two-phase titanium-aluminium alloy under uniaxial tension.
 \end{abstract}
 
 \begin{keyword}
@@ -79,7 +79,7 @@ $\alpha$+$\gamma$ two phase TiAl alloy; void; molecular dynamics
 
 \section{Introduction}
 
-TiAl alloy has been used as structural material in aviation industry because its inherent advantages such as low density and self-diffusion rates, high elastic module and high strength \cite {int.uti.j.1}. However, single phase $\gamma-\rm TiAl$ generally brittle at room temperatures and this limits their use in many other fields.Two-phase titantium aliuminde alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\gamma$($\rm Ti_3Al$) alloy \cite{int.uti.m.1}.
+TiAl alloy has been used as structural material in aviation industry because its inherent advantages such as low density and self-diffusion rates, high elastic module and high strength \cite {int.uti.j.1}. However, single phase $\gamma-\rm TiAl$ generally brittle at room temperatures and this limits their use in many other fields.Two-phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\gamma$($\rm Ti_3Al$) alloy \cite{int.uti.m.1}.
 Metal
 
 % study on poly 
@@ -92,12 +92,12 @@ Metal
 The crystal structure of $\gamma$-TiAl alloy is L10 [32,33] which is shown in Figure 1; the lattice constants
 
 
-The  in the material is determined by interatomic potencial. 
-We performed constant-pressure and constant-temperature(NPT) molecular dynamics simulation. The silulations were performed on the a system of 460000 atoms.
-Potential function is an mathematical approximation used  to determin interatomic effect among particlesan in MD simulation. The embedded atom method (MEAM) potential by \ref() was used In the study, which is used MD simulations were performed using the Large-scale Atomic/Molecular Massively Parallel Simulator (LAMMPS) open-source code\ref().
+The  in the material is determined by interatomic potential. 
+We performed constant-pressure and constant-temperature(NPT) molecular dynamics simulation. The simulations were performed on the a system of 460000 atoms.
+Potential function is an mathematical approximation used  to determine interatomic effect among particles in MD simulation. The embedded atom method (MEAM) potential by \ref() was used In the study, which is used MD simulations were performed using the Large-scale Atomic/Molecular Massively Parallel Simulator (LAMMPS) open-source code\ref().
 
 
-The simulation cells of two phase poly crystal with an initially spherical void at different position are shown in figure \ref{}. Periodic boundaryconditions are applied along all three directions, in effect creating  TiAl poly crystal with periodic nanovoid structures. Each cuboidal model, containing about 4.6 million atoms, has edge sizes of $L_x = nm$, $L_y =  nm$, $L_z =  nm$. During the construction process, the grain centers were randomly placed in a simulation cell resulting in the arbitrary shape and orientation of the grains. The construction of a specific grain would stop at a position where atoms from one grain centerwere no longer closer to the centers of other grains. There was only one intragranular or intergranular spherical void within each simulation model. The intragranular spherical void was located in grain interior of the largest grain of the simulation model, as shown in Fig. 1(b). The intergranular spherical voidwas at the center of the simulation cell, as shown in Fig. 1(c). Simulation specimens of the 16.32 nm grain size models with initial void diameters at or below 13 nm were mainly considered in the analysis sections owing to the fact that their spherical void surfaces did not intersect with surrounding GBs after the equilibration process. This avoided conflict between competing sources of dislocation emission: GBs or spherical void surfaces. Different diameter intragranular voids were all embedded in the same grain and at the same position in the samples, as shown in Fig. 1(b). The intergranular voids with different initial diameters were identically at the center of the simulation model, as shown in Fig. 1(c).
+The simulation cells of two phase poly crystal with an initially spherical void at different position are shown in figure \ref{}. Periodic boundary conditions are applied along all three directions, in effect creating  TiAl poly crystal with periodic nanovoid structures. Each cuboidal model, containing about 4.6 million atoms, has edge sizes of $L_x = nm$, $L_y =  nm$, $L_z =  nm$. During the construction process, the grain centers were randomly placed in a simulation cell resulting in the arbitrary shape and orientation of the grains. The construction of a specific grain would stop at a position where atoms from one grain center were no longer closer to the centers of other grains. There was only one intragranular or intergranular spherical void within each simulation model. The intragranular spherical void was located in grain interior of the largest grain of the simulation model, as shown in Fig. 1(b). The intergranular spherical void was at the center of the simulation cell, as shown in Fig. 1(c). Simulation specimens of the 16.32 nm grain size models with initial void diameters at or below 13 nm were mainly considered in the analysis sections owing to the fact that their spherical void surfaces did not intersect with surrounding GBs after the equilibration process. This avoided conflict between competing sources of dislocation emission: GBs or spherical void surfaces. Different diameter intragranular voids were all embedded in the same grain and at the same position in the samples, as shown in Fig. 1(b). The intergranular voids with different initial diameters were identically at the center of the simulation model, as shown in Fig. 1(c).
 
 
 \begin{table}[H]
@@ -109,7 +109,7 @@ The simulation cells of two phase poly crystal with an initially spherical void 
 		\hline
 		Manchester United & 6 & 4 & 0 & 2 & 10 & 5 & 12  \\
 		Celtic            & 6 & 3 & 0 & 3 &  8 & 9 &  9  \\
-		Benfica           & 6 & 2 & 1 & 3 &  7 & 8 &  7  \\
+		Benefit          & 6 & 2 & 1 & 3 &  7 & 8 &  7  \\
 		FC Copenhagen     & 6 & 2 & 1 & 3 &  5 & 8 &  7  \\
 		\hline
 \end{tabular}
@@ -130,7 +130,7 @@ is shown by Fig \ref{fig:pf_model_labeled}
 	\label{fig:pf_model}
 \end{figure}
 \subsection{Identification of Defects}
-
+\paragraph{}
  \begin{table}[h]
  	\centering
  	\caption{Table caption}
@@ -152,7 +152,7 @@ $$E=\sum_{i}^n a_i=0$$
 where
 
 
-parameters can begiven as Table \ref{Tab:par}:
+parameters can be given as Table \ref{Tab:par}:
 
 
 
@@ -160,10 +160,10 @@ parameters can begiven as Table \ref{Tab:par}:
 
 \subsection{The influence of void on strength of TiAl alloy}
 
-The existence of void detract the strength, and the void inside $\alpha$ phase grain have most significant  impact on the strength, however the void on the grain boundary have little impact on incipient strength of the material. Detailed observation of speciman with void inside the grain is shown in Figure ~\ref{fig:strline}.
-1.In many cases the orientation of slip slip is changed because the crystallographically avalilable slip and directions are not coontinuous across teh interface. This may significantly reduce the Schmid factor and thus impede slip tansfer. At the $\gamma/\gamma$ interfaces teh orientation of the slip plan could change through a relavely large angle of about 90 degree. Reorientation of slip is always required at the $\alpha_{2} / \gamma$ interface; the smallest angle between the corresponding slip planes ${1 1 1 }_{\gamma}$ and ${ 1 0 -1 0}_{\alpha_2}$ is about 19 degree ref{}.
-2. The core of  a dislocaiton intersecting an interface often needs to be transformed. For example, an ordinary 1/2<110] dislocaiton glidng in one $\gamma$ grain has to be converted in to a <101] superdislocation with the double Burgers vector glidng in an adjacent $\gamma$ grain. At the $\alpha/\gamma$ interface the dislocations existing in the $D0_{19}$ structure have to be transformed into dislocaitons consistent with the $L1_0$structure. These core tranfformations are associated with a change of teh dislocation line enenrgy because teh lengths of teh Burgers vectors and the shear module are different.
-3.Dislocations crossing semicoherent boundaries have to intersect the misfit dislocations, a process that involves elastic interaction, jog formation and the incorporation of gliding dislocations into the mismatch structure of the interface.When the slip is forced to cross $\alpha_2$ lamellae, pyramidal slip of the $\alpha_2$ phase is required, which needs an extremely high shear stress.
+The existence of void detract the strength, and the void inside $\alpha$ phase grain have most significant  impact on the strength, however the void on the grain boundary have little impact on incipient strength of the material. Detailed observation of specimen with void inside the grain is shown in Figure ~\ref{fig:strline}.
+1.In many cases the orientation of slip slip is changed because the crystallographically available slip and directions are not continuous across the interface. This may significantly reduce the Schmid factor and thus impede slip transfer. At the $\gamma/\gamma$ interfaces the orientation of the slip plan could change through a relevantly large angle of about 90 degree. Reorientation of slip is always required at the $\alpha_{2} / \gamma$ interface; the smallest angle between the corresponding slip planes ${1 1 1 }_{\gamma}$ and ${ 1 0 -1 0}_{\alpha_2}$ is about 19 degree ref{}.
+2. The core of  a dislocation intersecting an interface often needs to be transformed. For example, an ordinary 1/2<110] dislocation gliding in one $\gamma$ grain has to be converted in to a <101] super dislocation with the double Burgers vector gliding in an adjacent $\gamma$ grain. At the $\alpha/\gamma$ interface the dislocations existing in the $D0_{19}$ structure have to be transformed into dislocations consistent with the $L1_0$structure. These core transformations are associated with a change of the dislocation line energy because the lengths of the Burgers vectors and the shear module are different.
+3.Dislocations crossing semi-coherent boundaries have to intersect the misfit dislocations, a process that involves elastic interaction, jog formation and the incorporation of gliding dislocations into the mismatch structure of the interface.When the slip is forced to cross $\alpha_2$ lamellae, pyramidal slip of the $\alpha_2$ phase is required, which needs an extremely high shear stress.
 \begin{figure}
 	\centering
 	\includegraphics[width=0.7\linewidth]{pict/stress}
