add subsection potential

--- a/scpt.tex
+++ b/scpt.tex
@@ -87,10 +87,11 @@ Metal
 
 
 \section Molecular dynamics simulation analysis
+\subsection{potential}
 \subsection{Mode creation of nanocrystalline alloy}
 
 The crystal structure of $\gamma$-TiAl alloy is L10 [32,33] which is shown in Figure 1; the lattice constants
-
+ 
 
 The  in the material is determined by interatomic potential. 
 We performed constant-pressure and constant-temperature(NPT) molecular dynamics simulation. The simulations were performed on the a system of 460000 atoms.
