add virial stress

--- a/draft/scpt.tex
+++ b/draft/scpt.tex
@@ -97,8 +97,10 @@ The interaction of particle in the material is determined by interatomic potenti
 \paragraph{defect identification}
 
 \paragraph{stress calculation}
-
- 
+The atomic stress is calculated using the virial definition :
+$$\sigma_t(i)=-$$
+$$\sigma_t(i)= $$
+where $\f_\alpha$ is the interatomic force between atom i and j in the direction $\alpha$, $\gamma_\beta$ is the distance in direction 
 
 
 
@@ -137,32 +139,32 @@ is shown by Fig \ref{fig:pf_model_labeled}
 %	\label{fig:pf_model}
 %\end{figure}
 \subsection{Identification of Defects}
-\paragraph{}
- \begin{table}[h]
- 	\centering
- 	\caption{Table caption}
- 	\begin{tabular}{l l l}
- 		\hline
- 		\textbf{Treatments} & \textbf{Response 1} & \textbf{Response 2}\\
- 		\hline
- 		Treatment 1 & 0.0003262 & 0.562 \\
- 		Treatment 2 & 0.0015681 & 0.910 \\
- 		Treatment 3 & 0.0009271 & 0.296 \\
- 		\hline
- 	\end{tabular}
- 	
- \end{table}
-
-
-$$E=\sum_{i}^n a_i=0$$
-
-where
-
-
-parameters can be given as Table \ref{Tab:par}:
-
-
-
+%\paragraph{}
+% \begin{table}[h]
+% 	\centering
+% 	\caption{Table caption}
+% 	\begin{tabular}{l l l}
+% 		\hline
+% 		\textbf{Treatments} & \textbf{Response 1} & \textbf{Response 2}\\
+% 		\hline
+% 		Treatment 1 & 0.0003262 & 0.562 \\
+% 		Treatment 2 & 0.0015681 & 0.910 \\
+% 		Treatment 3 & 0.0009271 & 0.296 \\
+% 		\hline
+% 	\end{tabular}
+% 	
+% \end{table}
+%
+%
+%$$E=\sum_{i}^n a_i=0$$
+%
+%where
+%
+%
+%parameters can be given as Table \ref{Tab:par}:
+%
+%
+%
 \section{Results and Discussion}
 
 \subsection{The influence of void on strength of TiAl alloy}
